# knot

./: .dir-locals.el  .gitignore  .gitlab-ci.yml  .gitmodules  .readthedocs.yaml  .travis.yml  .ycm_extra_conf.py  AUTHORS  COPYING  CodingStyle  CuteDNS.files  CuteDNS.includes  Dockerfile  Doxy.page.h  Doxyfile  Doxyfile.devel  Doxyfile.in  FUZZING  KNOWN_ISSUES  Knot.config  Knot.files  Knot.includes  Makefile  Makefile.am  Makefile.docker  NEWS  NSEC5_README.txt  README  README.md  RELNOTES  THANKS  astylerc  bitset.c  bitset.h  common.c  common.h  configure.ac  coverity_model.c  cuckoo-hash-table.c  cuckoo-hash-table.h  (+20 more)
dnssec/: .gitignore  AUTHORS  Doxyfile  DoxygenLayout.xml  Makefile.am
dnssec/contrib/: gnutls_error.c  template.json
dnssec/doc/: api.md  coding.md
dnssec/lib/: binary.c  crypto.c  error.c  random.c  shared.h  tsig.c  wire.h  yml.c  yml.h
dnssec/man/: Makefile.am  keymgr.8.in
dnssec/shared/: base32hex.c  clists.c  clists.h  dname.c  dname.h  hex.c  hex.h  hex_gnutls.h  path.c  path.h  pem.c  pem.h  shared.h  strtonum.h  yml.c  yml.h
dnssec/src/: binary.c  binary.h  crypto.c  error.h  hex.c  hex.h  key.c  key.h  keystore.c  keystore.h  keytag.h  pkcs8.c  random.c  random.h  shared.h  sign.c  sign.h  wire.h
dnssec/tests/: .gitignore  Makefile.am  binary.c  crypto.c  kasp_dir_escape.c  kasp_dir_file.c  kasp_policy.c  kasp_store.c  key.c  key_algorithm.c  key_keyid.c  key_keytag.c  key_pubkey.c  keyid.c  keys_keytag.c  keystore_pkcs8.c  keystore_pkcs8_dir.c  keytag.c  nsec_bitmap.c  nsec_hash.c  random.c  sample_keys.h  shared_base32hex.c  shared_dname.c  sign.c  sign_der.c  store_pkcs8_dir.c  tsig.c  wire.c
dnssec/utils/: .gitignore  Makefile.am  generate.c  genzonekey.c  getpub.c  import.c  keymgr.c  legacy.h  parsekey.c  utils.h  zscanner
doc/: .gitignore  .readthedocs_requirements.txt  0001-patch.patch  KnotDNS.epub  Makefile  Makefile.am  appendices.rst  conf.py  conf.py.in  conf_autotools.py.in  configuration.rst  configuration.texi  configuration.xml  docker.md  index.rst  indices.texi  installation.rst  installation.texi  installation.xml  introduction.rst  introduction.texi  introduction.xml  knot.rst  knot.texi  knot.xml  logo.eps  man_kcatalogprint.rst  man_kdig.rst  man_keymgr.rst  man_khost.rst  man_kjournalprint.rst  man_kkeymgr.rst  man_knot-xdp-gun.rst  man_knot1to2.rst  man_knotc.rst  man_knotd.rst  man_knsec3hash.rst  man_knsupdate.rst  man_ksignzone.rst  man_kxdpgun.rst  (+26 more)
doc/doxygen/: Doxy.page.h  DoxygenLayout.xml
doc/ext/: ignore_panels.py
doc/man/: kcatalogprint.8in  kdig.1  kdig.1in  keymgr.8  keymgr.8in  khost.1  khost.1in  kjournalprint.1in  kjournalprint.8in  kkeymgr.8in  knot-xdp-gun.8in  knot.conf.5  knot.conf.5in  knot1to2.1  knot1to2.1in  knotc.8  knotc.8in  knotd.8  knotd.8in  knsec3hash.1  knsec3hash.1in  knsupdate.1  knsupdate.1in  ksignzone.8in  kxdpgun.8in  kzonecheck.1in  kzonesign.1in  kzonesign.8in  pykeymgr.8in  xdp-gun.8in
doc/theme_epub/: epub-cover.html  theme.conf
doc/theme_html/: theme.conf
libknot/: AUTHORS  Makefile.am  changesets.c  changesets.h  common  common.h  config.h.in  configure.ac  consts.h  debug.c  debug.h  descriptor.c  descriptor.h  dname-table.c  dname-table.h  dname.c  dname.h  edns.c  edns.h  error.c  error.h  libknot.h  name-server.c  name-server.h  node.c  node.h  nsec3.c  nsec3.h  packet.c  packet.h  query.c  query.h  rdata.c  rdata.h  response.c  response.h  response2.c  response2.h  rrset.c  rrset.h  (+19 more)
libknot/hash/: cuckoo-hash-table.c  cuckoo-hash-table.h  hash-functions.c  hash-functions.h  universal-system.c  universal-system.h
libknot/nameserver/: name-server.c  name-server.h
libknot/packet/: packet.c  packet.h  query.c  query.h  response.c  response.h  response2.c  response2.h
libknot/updates/: changesets.c  changesets.h  ddns.c  ddns.h  xfr-in.c  xfr-in.h
libknot/util/: debug.c  debug.h  descriptor.c  descriptor.h  error.c  error.h  tolower.c  tolower.h  utils.c  utils.h  wire.h
libknot/zone/: dname-table.c  dname-table.h  node.c  node.h  zone-contents.c  zone-contents.h  zone-tree.c  zone-tree.h  zone.c  zone.h  zonedb.c  zonedb.h
python/libknot/: Makefile.am  Makefile.inc  README.md  __init__.py  __init__.py.in  control.py  dname.py  (+3 more)
samples/: Makefile.am  bogus25.com.zone  cutedns.conf.sample  dbus_client.pl  dbus_client.py  dbus_client.sh  dnssec.zone  easy.zone  example.com.zone  example.com.zone.nsec3  example.com.zone.signed  example.com.zone.signed.nsec3  external_validation.sh  keymgr-completion.sh  keymgr-completion.zsh  knot-probe-client.c  knot.conf.sample  knot.full.conf  knot.keys.conf  knot.min.conf  knot.sample.conf  knot.sample.conf.in  knotd.conf.in  probe_dump.py  some-cz-zones  stats_http.py  stats_influxdb.py
src/: Makefile.am  bitset.h  common.c  common.h  config.h.in  cuckoo-hash-table.c  cuckoo-hash-table.h  cuckoo-test.c  dispatcher.c  dispatcher.h  dns-simple.c  dns-simple.h  dnssec  hash-functions.h  kdig.8  khost.8  knot.conf.5  knot.init  knot.service  knot.spec  knot.sysconfig  knotc.8  knotd.8  knotd.pc.in  knsupdate.8  libdnssec.pc.in  libknot-int.pc.in  libknot-yparser.pc.in  libknot.map  libknot.pc.in  libzscanner.pc.in  main.c  name-server.c  name-server.h  server.c  server.h  socket-manager.c  socket-manager.h  tests.c  universal-system.c  (+9 more)
tests/: .gitignore  Makefile  Makefile.am  Makefile.inc  README  TESTS  TODO  acl.c  base32hex.c  base64.c  changeset.c  chkjournal.c  conf.c  conf_tools.c  confdb.c  confio.c  control.c  cookies-client.c  cookies-opt.c  cookies-server.c  cookies.c  db.c  descriptor.c  dname.c  dnssec_keys.c  dnssec_nsec3.c  dnssec_sign.c  dnssec_zone_nsec.c  dthreads.c  edns.c  endian.c  events.c  fake_server.h  fdset.c  hattrie.c  heap.c  hhash.c  internal_mem.c  journal.c  journal_lmdb.c  (+66 more)
tests-fuzz/: .gitignore  Makefile.am  README.md  afl-loop.h  fuzz_addr_parse_forward.c  fuzz_addr_parse_reverse.c  fuzz_dname_from_str.c  fuzz_dname_to_str.c  fuzz_packet.c  fuzz_zscanner.c  main.c  packet.c  packet_libfuzzer.c
tests-redis/: Makefile.am  config.txt  knot-redis.supp  requirements.txt  test.py
(+4059 files in other folders)
